added chat persistance
